--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
         "express": "^4.17.1",
         "jest-when": "^3.5.2",
         "jsonwebtoken": "^9.0.1",
+        "mime-types": "^2.1.35",
         "multer": "^1.4.5-lts.1",
-
         "pg": "^8.11.2",
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.3.17",
